# zkPrompt

./: .env_tmplate  .gitignore  .mocharc.json  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
circuits/aes-ctr/: aes-ctr.circom  gctr.circom  utils.circom
circuits/aes-ctr/aes/: cipher.circom  ff.circom  key_expansion.circom  mix_columns.circom  sbox128.circom
circuits/chacha20/: chacha-qr.circom  chacha-round.circom  chacha20.circom
circuits/mimc/: mimc.circom
circuits/test/: aes-ctr.test.ts  chacha20.test.ts  mimc.test.ts
circuits/test/common/: index.ts
circuits/utils/: bits.circom  utils.circom
client/: Cargo.toml
client/src/: client.rs  key_log.rs  lib.rs
prover/: Cargo.toml
prover/src/: build_cs.rs  lib.rs
prover/src/chacha20/: mod.rs  quarter_round.rs  round.rs
prover/src/mimc/: mod.rs  params.rs
prover/src/mimc/bn254/: constraint.rs  gadgets.rs  mod.rs
prover/src/openai/req/: mod.rs  traits.rs
prover/src/utils/: mod.rs
proxy/: Cargo.toml
proxy/src/: main.rs
