[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = {git = "https://github.com/zypher-network/rustls" }
webpki = { package = "rustls-webpki", version = "0.102.8", features = ["alloc"], default-features = false }
webpki-roots = "0.26"
rustls-native-certs = "0.8"
ring = "0.17.9"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { git = "https://github.com/zypher-network/tokio-rustls" }
anyhow = "1.0"
dotenv = "0.15"




