[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"
hickory-resolver = "0.24"
rustls = { git = "https://github.com/zypher-network/rustls" }
rustls-native-certs = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { git = "https://github.com/zypher-network/tokio-rustls" }